--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,9 +13,6 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;700&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
     <title>УИТС</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -34,7 +31,7 @@
     <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
-                <a href="#" class="header__logo"></a>
+                <a href="#" class="header__logo" id="logo"></a>
                 <div class="header__nav" id="nav">
                     <a href="#" class="nav__link">
                         Абитуриентам
@@ -64,8 +61,6 @@
     </header>
     <div class="intro" id="intro">
         <div class="container">
-            <!-- Header -->
-            <!-- Header -->
 
             <div class="intro__inner">
                 <div class="intro__content">
@@ -127,7 +122,7 @@
             <div class="applicants__cards">
                 <div class="applicants__item">
                     <div class="applicants__card__icon">
-                        <img src="/img/applicants/card__icon1.png" alt="">
+                        <img src="img/applicants/card__icon1.png" alt="">
                     </div>
                     <div class="applicants__card__title">
                         Как поступить
@@ -141,7 +136,7 @@
                 </div>
                 <div class="applicants__item">
                     <div class="applicants__card__icon">
-                        <img src="/img/applicants/card__icon2.png" alt="">
+                        <img src="img/applicants/card__icon2.png" alt="">
                     </div>
                     <div class="applicants__card__title">
                         Куда поступить
@@ -155,7 +150,7 @@
                 </div>
                 <div class="applicants__item">
                     <div class="applicants__card__icon">
-                        <img src="/img/applicants/card__icon3.png" alt="">
+                        <img src="img/applicants/card__icon3.png" alt="">
                     </div>
                     <div class="applicants__card__title">
                         Кем хочешь стать
@@ -178,7 +173,7 @@
             <div class="departments__cards" id="departmentsSlider">
                 <div class="departments__item">
                     <div class="departments__content">
-                        <img src="/img/departments/card1.png" alt="" class="departments__icon">
+                        <img src="img/departments/card1.png" alt="" class="departments__icon">
                         <div class="departments__item__num">
                             01
                         </div>
@@ -196,7 +191,7 @@
                 </div>
                 <div class="departments__item">
                     <div class="departments__content">
-                        <img src="/img/departments/card2.png" alt="" class="departments__icon">
+                        <img src="img/departments/card2.png" alt="" class="departments__icon">
                         <div class="departments__item__num">
                             02
                         </div>
@@ -215,7 +210,7 @@
                 </div>
                 <div class="departments__item">
                     <div class="departments__content">
-                        <img src="/img/departments/card3.png" alt="" class="departments__icon">
+                        <img src="img/departments/card3.png" alt="" class="departments__icon">
                         <div class="departments__item__num">
                             03
                         </div>
@@ -234,7 +229,7 @@
                 </div>
                 <div class="departments__item">
                     <div class="departments__content">
-                        <img src="/img/departments/card4.png" alt="" class="departments__icon">
+                        <img src="img/departments/card4.png" alt="" class="departments__icon">
                         <div class="departments__item__num">
                             04
                         </div>
@@ -255,7 +250,7 @@
                 </div>
                 <div class="departments__item">
                     <div class="departments__content">
-                        <img src="/img/departments/card4.png" alt="" class="departments__icon">
+                        <img src="img/departments/card4.png" alt="" class="departments__icon">
                         <div class="departments__item__num">
                             05
                         </div>
@@ -285,7 +280,7 @@
             </h2>
             <div class="reviews__slider" id="reviewsSlider">
                 <div class="reviews__item" style="flex-direction: row;">
-                    <img src="/img/reviews/review_student_photo.png" alt="" class="reviews__photo">
+                    <img src="img/reviews/review_student_photo.png" alt="" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__role">
                             студентка вгуит
@@ -301,16 +296,16 @@
                             Мне кажется в каждом вузе есть свои недостатки и достоинства.
                         </div>
                         <ul class="reviews__rate">
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/unrated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/unrated.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
                 <div class="reviews__item" style="flex-direction: row;">
-                    <img src="/img/reviews/review_student_photo.png" alt="" class="reviews__photo">
+                    <img src="img/reviews/review_student_photo.png" alt="" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__role">
                             студентка вгуит
@@ -326,16 +321,16 @@
                             Мне кажется в каждом вузе есть свои недостатки и достоинства.
                         </div>
                         <ul class="reviews__rate">
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/unrated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/unrated.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
                 <div class="reviews__item" style="flex-direction: row;">
-                    <img src="/img/reviews/review_student_photo.png" alt="" class="reviews__photo">
+                    <img src="img/reviews/review_student_photo.png" alt="" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__role">
                             студентка вгуит
@@ -351,16 +346,16 @@
                             Мне кажется в каждом вузе есть свои недостатки и достоинства.
                         </div>
                         <ul class="reviews__rate">
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/unrated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/unrated.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
                 <div class="reviews__item" style="flex-direction: row;">
-                    <img src="/img/reviews/review_student_photo.png" alt="" class="reviews__photo">
+                    <img src="img/reviews/review_student_photo.png" alt="" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__role">
                             студентка вгуит
@@ -376,16 +371,16 @@
                             Мне кажется в каждом вузе есть свои недостатки и достоинства.
                         </div>
                         <ul class="reviews__rate">
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/unrated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/unrated.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
                 <div class="reviews__item" style="flex-direction: row;">
-                    <img src="/img/reviews/review_student_photo.png" alt="" class="reviews__photo">
+                    <img src="img/reviews/review_student_photo.png" alt="" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__role">
                             студентка вгуит
@@ -401,11 +396,11 @@
                             Мне кажется в каждом вузе есть свои недостатки и достоинства.
                         </div>
                         <ul class="reviews__rate">
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/rated.png" alt=""></li>
-                            <li><img src="/img/reviews/unrated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/rated.png" alt=""></li>
+                            <li><img src="img/reviews/unrated.png" alt=""></li>
                         </ul>
                     </div>
                 </div>
@@ -423,7 +418,7 @@
             </div>
             <div class="students__slider" id="studentsSlider">
                 <div class="students__item">
-                    <img src="/img/students/students_1.png" alt="" class="students__photo">
+                    <img src="img/students/students_1.png" alt="" class="students__photo">
                     <div class="students__content">
                         <div class="students__subtitle">
                             традиционные ежегодные праздники
@@ -436,7 +431,7 @@
                     </div>
                 </div>
                 <div class="students__item">
-                    <img src="/img/students/students_2.png" alt="" class="students__photo">
+                    <img src="img/students/students_2.png" alt="" class="students__photo">
                     <div class="students__content">
                         <div class="students__subtitle">
                             Соревнования между факультетами
@@ -449,7 +444,7 @@
                     </div>
                 </div>
                 <div class="students__item">
-                    <img src="/img/students/students_3.png" alt="" class="students__photo">
+                    <img src="img/students/students_3.png" alt="" class="students__photo">
                     <div class="students__content">
                         <div class="students__subtitle">
                             форумы и собрания за пределами вуза
@@ -462,7 +457,7 @@
                     </div>
                 </div>
                 <div class="students__item">
-                    <img src="/img/students/students_1.png" alt="" class="students__photo">
+                    <img src="img/students/students_1.png" alt="" class="students__photo">
                     <div class="students__content">
                         <div class="students__subtitle">
                             традиционные ежегодные праздники
@@ -475,7 +470,7 @@
                     </div>
                 </div>
                 <div class="students__item">
-                    <img src="/img/students/students_2.png" alt="" class="students__photo">
+                    <img src="img/students/students_2.png" alt="" class="students__photo">
                     <div class="students__content">
                         <div class="students__subtitle">
                             Соревнования между факультетами
@@ -498,28 +493,28 @@
             </div>
             <div class="partners__blocks">
                 <div class="partners__item">
-                    <img src="/img/partners/partners1.png" alt="" style="width: 194px;">
+                    <img src="img/partners/partners1.png" alt="" style="width: 194px;">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners/partners2.png" alt="" style="width: 220px;">
+                    <img src="img/partners/partners2.png" alt="" style="width: 220px;">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners/partners3.png" alt="" style="width: 190px;">
+                    <img src="img/partners/partners3.png" alt="" style="width: 190px;">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners/partners4.png" alt="" style="width: 218px;">
+                    <img src="img/partners/partners4.png" alt="" style="width: 218px;">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners/partners5.png" alt="" style="width: 160px;">
+                    <img src="img/partners/partners5.png" alt="" style="width: 160px;">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners/partners6.png" alt="" style="width: 221px;">
+                    <img src="img/partners/partners6.png" alt="" style="width: 221px;">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners/partners7.png" alt="" style="width: 231px;">
+                    <img src="img/partners/partners7.png" alt="" style="width: 231px;">
                 </div>
                 <div class="partners__item">
-                    <img src="/img/partners/partners8.png" alt="" style="width: 144px;">
+                    <img src="img/partners/partners8.png" alt="" style="width: 144px;">
                 </div>
 
             </div>
@@ -557,7 +552,7 @@
                             </div>
                             <div class="form__file">
                                 <input type="file" name="file" id="file">
-                                <label for="file" class="form__inputfile"><img src="/img/join/file__icon.png"
+                                <label for="file" class="form__inputfile"><img src="img/join/file__icon.png"
                                         alt="">Прикрепить файлы</label>
                             </div>
                             <button type="submit" class="form__button btn">Отправить сообщение</button>
@@ -574,17 +569,17 @@
                             г. Воронеж, пр. Революции,19
                         </p>
                         <div class="join__social">
-                            <a href="#" class="social__item"><img src="/img/join/social__icon1.png" alt=""></a>
-                            <a href="#" class="social__item"><img src="/img/join/social__icon2.png" alt=""></a>
-                            <a href="#" class="social__item"><img src="/img/join/social__icon3.png" alt=""></a>
+                            <a href="#" class="social__item"><img src="img/join/social__icon1.png" alt=""></a>
+                            <a href="#" class="social__item"><img src="img/join/social__icon2.png" alt=""></a>
+                            <a href="#" class="social__item"><img src="img/join/social__icon3.png" alt=""></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <script type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script src="/js/app.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="js/slick.min.js"></script>
+        <script src="js/app.js"></script>
 </body>
 
 </html>
